Opened 4 years ago

Closed 6 months ago

#16693 closed bug (fixed)

SEM: Test FAILED - conformance/interfaces/sem_timedwait/6-1.c

Reported by: cocobean Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: System/POSIX Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The process would be blocked, and the timeout parameter is specified in nanoseconds field value less than zero. Should return ERROR (EINVAL).

Ref: conformance/interfaces/sem_timedwait/6-1.c

Expected result: Test passed

Actual Result: TEST FAILED

Tested on: Haiku hrev54811 x86_gcc2 with Open POSIX Test 1.5.2

Change History (2)

comment:1 by cocobean, 2 years ago

Test INVALID - per UNIX 2003 compliance.

Please close this ticket.

Last edited 2 years ago by cocobean (previous) (diff)

comment:2 by waddlesplash, 6 months ago

Keywords: POSIX semaphores sem_timedwait removed
Resolution: fixed
Status: newclosed

Fixed in hrev58065.

Note: See TracTickets for help on using tickets.