libroot: Handle invalid timeouts being passed to unnamed_sem_timedwait.

According to the POSIX specification:

> The sem_timedwait() function shall fail if:
> [EINVAL]
> 	The process or thread would have blocked, and the abstime
>	parameter specified a nanoseconds field value less than zero
>	or greater than or equal to 1000 million.

Fixes #16693, #16694.